# univac-1219-riscv

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  run-tests.sh
.github/workflows/: ci.yml
asm/: common.mk
asm/ascii-art/: common.mk
asm/diagnostic/: 00-header.univac  01-util.univac  02-tests.univac  03-negzero.univac  99-main.univac  snapshot.txt
asm/hello-world/: README.md  main.univac
asm/hello-world-minimal/: main.univac
asm/io-test/: 00-header.univac  01-util.univac  02-main.univac
asm/memcheck/: 01-util.univac  02-main.univac  Makefile
asm/overstrike/: README.md  common.mk  overstrike.py
c/: README.md
scripts/: echo.py  ppp.sh
toolchain/: common.mk  linker.ld  start.c  syscalls.c  syscalls.h
tools/: dune-project  tools.opam
tools/lib/: dune  emu.ml  emu.mli  import.ml  import.mli  instruction.ml  instruction.mli  instruction_gen.ml  instruction_gen.mli  parser.ml  parser.mli  tape.ml  tape.mli  tools.mli  univac_encoding.ml  univac_encoding.mli  univac_runner.ml  univac_runner.mli  util.ml  util.mli
tools/lithium/: README.md  dune-project
tools/lithium/lib/: dune  lithium.ml  lithium.mli
tools/lithium/test/: dune  test_lithium.ml
tools/mini/: README.md  dune  function_description.ml  mini.ml  mini.mli  type_description.ml
tools/mini/libmini/: Makefile  mini-rv32ima.h  mini_wrapper.c  mini_wrapper.h
tools/templating/: README.md  dune-project
tools/templating/lib/: dune  templating.ml  templating.mli
tools/test/: dune  test_emu.ml  test_helpers.ml  test_parser.ml  test_univac.ml  test_univac_encoding.ml
(+137 files in other folders)
